lib/translator/test/fixtures/ok/raw/literals.prg
PROGRAM literals
BEGIN
    2
    "hello"
    2.5
    true
    false
END
