lib/translator/test/fixtures/error/raw/unary-datatypes.prg
PROGRAM error_unary_datatypes
BEGIN
    -"hello"
END
